==> INSA-GEI/insa-nxpcup/archive/code/2019-2020/Equipe2/NXP-DRY-2023/application/ImageProcessing.cpp <==
#include "ImageProcessing.h"
#define SERVO_MAX_LEFT_ANGLE -22.0
#define SERVO_MAX_RIGHT_ANGLE 29.0

void Img_Proc::init(){
	
	// turn on ADC0 clock
	SIM->SCGC6 |= SIM_SCGC6_ADC0_MASK;
	SIM->SCGC5 = SIM_SCGC5_PORTC_MASK | SIM_SCGC5_PORTB_MASK;
	
	PORTC->PCR[2]  |= PORT_PCR_MUX(0);		// Camera 1 PTC2 ADC0_SE11
	
	PORTB->PCR[8]  |= PORT_PCR_MUX(1);	// PTB8 Camera SI
	PORTB->PCR[9]  |= PORT_PCR_MUX(1);	// PTB9 Camera Clock
	GPIOB->PDDR |= (1<<8);			// PTB8 Camera SI
	GPIOB->PDDR |= (1<<9);			// PTB9 Camera Clock
	
	
	// ADC0 clock configuration : 													WARNING : maybe not compatible with 48MHz system clock ! to check
	ADC0->CFG1 |= 0x01;				// clock is bus clock divided by 2 = 24 MHz
	
	// ADC0 resolution    
	ADC0->CFG1 |= 0x08;				// resolution 10 bit, max. value is 1023

	// ADC0 conversion mode
	ADC0->SC3 = 0x00;				// single conversion mode
	
	
	diff=0;
	diff_old=0;
	servo_angle=0;
	RoadMiddle=0;
	RoadMiddle_old=0;
	BlackLineRight=127;
	BlackLineLeft=0;
	number_edges=0;
	edges_cnt=0;
	finish=false;
	CompareData_high = 200;
	CompareData_low = 100;
	black_middle_pos_rect1=0;
	black_middle_pos_rect2=0;
}

void Img_Proc::capture(void){
		ADC0->CFG2 |= 0x10;							// select B side of the MUX
		CAM_SI_HIGH;
		CAM_DELAY;
		CAM_CLK_HIGH;
		CAM_DELAY;
		CAM_SI_LOW;
		CAM_DELAY;
		// inputs data from camera (first pixel)
		ADC0->SC1[0]  =  11;							// set ADC0 channel 11
		while((ADC0->SC1[0] & ADC_SC1_COCO_MASK) == 0);// wait until ADC is ready
		ImageData[0] = ADC0->R[0];						// return value
		CAM_CLK_LOW;

		for(i=1;i<128;i++){
			CAM_DELAY;
			CAM_CLK_HIGH;
			 // inputs data from camera (one pixel each time through loop)
			ADC0->SC1[0]  =  11;							// set ADC0 channel 11
			while((ADC0->SC1[0] & ADC_SC1_COCO_MASK) == 0);// wait until ADC is ready
			ImageData[i] = ADC0->R[0];						// return value
			CAM_CLK_LOW;
		}
	
		CAM_DELAY;
		CAM_DELAY;
		CAM_CLK_HIGH;
		CAM_DELAY;
		CAM_DELAY;
		CAM_CLK_LOW;
		/*
		//generating dummy data here
		for(i=0;i<128;i++){
			int data;
			if((i>32 && i<48) || (i>80 && i<96)){
				data=150+rand()%10;
			}else{
				data=50+rand()%10;
			}
			ImageData[i]=data;
		}
		*/
}
